--- a/Worksheet___10.cls
+++ b/Worksheet___10.cls
@@ -7,33 +7,30 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
-Private Sub Worksheet_Activate()
-    Range(Evaluate("INDIRECT(""$C$1"")")).Calculate
-    Range(Evaluate("INDIRECT(""$D$2"")")).Select
-    ActiveWindow.ScrollRow = Selection.Row
-    ActiveWindow.ScrollColumn = Selection.Column
+Private Sub Worksheet_Deactivate()
+    range(Evaluate("INDIRECT(""$C$1"")")).Calculate
 End Sub
 
-Private Sub Worksheet_SelectionChange(ByVal target As Range)
+Private Sub Worksheet_SelectionChange(ByVal target As range)
     Dim nowRow As String
     On Error Resume Next
-    nowRow = Evaluate("表格6866[[#This Row], [編號]:[編號]]").Value2
-    Worksheets("趨勢").Range("B2").Value2 = nowRow
+    nowRow = Evaluate("表格6866[[#This Row], [ID]:[ID]]").Value2
+    Worksheets("趨勢").range("B2").Value2 = nowRow
     
     
     
-    If Worksheets("趨勢").Range("A2").Value2 = False And Selection.Cells.count = 1 And Application.CutCopyMode = False Then
+    If Worksheets("趨勢").range("A2").Value2 = False And Selection.Cells.Count = 1 And Application.CutCopyMode = False Then
 
         
         
-        Set isect = Application.Intersect(Range(Evaluate("INDIRECT(""$B$2"")")), Selection)
+        Set isect = Application.Intersect(range(Evaluate("INDIRECT(""$B$2"")")), Selection)
         If isect Is Nothing Then
             
         Else
                     'Updateby Extendoffice 20160704
             Application.ScreenUpdating = False
             
-            Dim rng As Range
+            Dim rng As range
             Dim cFnd As String
             Dim xTmp As String
             Dim x As Long
@@ -42,7 +39,7 @@ Private Sub Worksheet_SelectionChange(ByVal target As Range)
             On Error Resume Next
             cFnd = Selection.Value
             y = Len(cFnd)
-            For Each rng In Range(Evaluate("INDIRECT(""$B$2"")"))
+            For Each rng In range(Evaluate("INDIRECT(""$B$2"")"))
               'Selection.Font.Size = 12
               'Rng.Font.Size = 12
               rng.Font.Bold = False
@@ -52,7 +49,7 @@ Private Sub Worksheet_SelectionChange(ByVal target As Range)
                   xTmp = ""
                   For x = 0 To m - 1
                     xTmp = xTmp & Split(rng.Value, cFnd)(x)
-                    .Characters(start:=Len(xTmp) + 1, Length:=y).Font.Bold = True
+                    .Characters(Start:=Len(xTmp) + 1, Length:=y).Font.Bold = True
                     xTmp = xTmp & cFnd
                   Next
                 End If
@@ -62,3 +59,5 @@ Private Sub Worksheet_SelectionChange(ByVal target As Range)
         End If
     End If
 End Sub
+
+
