--- a/Worksheet___3.cls
+++ b/Worksheet___3.cls
@@ -7,75 +7,66 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
-Private Sub Worksheet_Activate()
-    Range(Evaluate("INDIRECT(""$C$1"")")).Calculate
-    Range(Evaluate("INDIRECT(""$R$2"")")).Select
-    ActiveWindow.ScrollRow = Selection.Row
-    'ActiveWindow.ScrollColumn = Selection.Column
-End Sub
-
-Private Sub Worksheet_SelectionChange(ByVal target As Range)
-    
-    If Worksheets("趨勢").Range("A2").Value2 = False And Selection.Cells.count = 1 And Application.CutCopyMode = False Then
-
-        
-        
-        Set isect = Application.Intersect(Range(Evaluate("INDIRECT(""$B$2"")")), Selection)
+Private Sub Worksheet_SelectionChange(ByVal target As range)
+    u = 0
+    If Selection.Cells.Count = 1 And Application.CutCopyMode = False Then
+        Set isect = Application.Intersect(range("表格2"), Selection)
         If isect Is Nothing Then
             
         Else
-                    'Updateby Extendoffice 20160704
-            Application.ScreenUpdating = False
-            
-            Dim rng As Range
-            Dim cFnd As String
-            Dim xTmp As String
-            Dim x As Long
-            Dim m As Long
-            Dim y As Long
-            On Error Resume Next
-            cFnd = Selection.Value
-            y = Len(cFnd)
-            For Each rng In Range(Evaluate("INDIRECT(""$B$2"")"))
-              'Selection.Font.Size = 12
-              'Rng.Font.Size = 12
-              rng.Font.Bold = False
-              With rng
-                m = UBound(Split(rng.Value, cFnd))
-                If m > 0 Then
-                  xTmp = ""
-                  For x = 0 To m - 1
-                    xTmp = xTmp & Split(rng.Value, cFnd)(x)
-                    .Characters(start:=Len(xTmp) + 1, Length:=y).Font.Bold = True
-                    xTmp = xTmp & cFnd
-                  Next
-                End If
-              End With
-            Next rng
-            Application.ScreenUpdating = True
+            If Not Application.Intersect(range("表格2[Description]"), Selection) Is Nothing Then
+                range("表格2[交易物件]").Interior.ColorIndex = 0
+                range("表格2[Description]").Interior.ColorIndex = 0
+                Selection.Interior.ColorIndex = 37
+                On Error Resume Next
+                WordsList = json2arr(use_Structured2R(Selection, "表格2", "Dependency"))
+                For i = 0 To UBound(WordsList)
+                    If WordsList(i) <> vbNullString Then
+                        On Error GoTo Error_handler:
+                        WorksheetFunction.index(range("表格2[交易物件]"), WorksheetFunction.Match(val(WordsList(i)), range("表格2[ID]"), 0)).Interior.ColorIndex = 37
+                    End If
+                Next i
+            End If
+            If Not Application.Intersect(range("表格2[交易物件]"), Selection) Is Nothing Then
+                range("表格2[編號]").Interior.ColorIndex = 0
+                On Error Resume Next
+                WordsList = Split(range(use_Structured(Selection, 11)).Value2)
+                For i = 0 To UBound(WordsList)
+                    If WordsList(i) <> vbNullString Then
+                        On Error GoTo Error_handler:
+                        WorksheetFunction.index(range("表格2[編號]"), WorksheetFunction.Match(val(WordsList(i)), range("表格2[ID]"), 0)).Interior.ColorIndex = 37
+                    End If
+                Next i
+                
+                range("表格2[交易物件]").Interior.ColorIndex = 0
+                On Error Resume Next
+                WordsList = Split(range(use_Structured(Selection, 14)).Value2, ",")
+                For i = 0 To UBound(WordsList)
+                    If WordsList(i) <> vbNullString Then
+                        On Error GoTo Error_handler:
+                        WorksheetFunction.index(range("表格2[交易物件]"), WorksheetFunction.Match(val(WordsList(i)), range("表格2[ID]"), 0)).Interior.ColorIndex = 37
+                    End If
+                Next i
+                
+                range("表格2[Description]").Interior.ColorIndex = 0
+                On Error Resume Next
+                WordsList = json2arr(use_Structured2R(Selection, "表格2", "Supply"))
+                For i = 0 To UBound(WordsList)
+                    If WordsList(i) <> vbNullString Then
+                        On Error GoTo Error_handler:
+                        WorksheetFunction.index(range("表格2[Description]"), WorksheetFunction.Match(val(WordsList(i)), range("表格2[ID]"), 0)).Interior.ColorIndex = 37
+                    End If
+                Next i
+            End If
         End If
     End If
-    
+Error_handler:
+
     Dim nowRow As String
     On Error Resume Next
-    nowRow = Evaluate("表格2[[#This Row], [編號]:[編號]]").Value2
-    Worksheets("趨勢").Range("B2").Value2 = nowRow
+    nowRow = Evaluate("表格2[[#This Row], [ID]:[ID]]").Value2
+    Worksheets("趨勢").range("B2").Value2 = nowRow
     
     
 End Sub
 
-Sub testPaste()
-
-    Dim DataObj As MSForms.DataObject
-    Set DataObj = New MSForms.DataObject
-    DataObj.GetFromClipboard
-
-    sText = DataObj.GetText
-    
-    'If Len(sText) = 0 Then
-        MsgBox Len(sText)
-    'End If
-
-    'Sheets("Sheet2").Rows(1).PasteSpecial Transpose:=True
-
-End Sub
