--- a/Worksheet___11.cls
+++ b/Worksheet___11.cls
@@ -7,13 +7,14 @@ Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
-
 Private Sub Worksheet_Activate()
-    Range("$F$3").Calculate
-    Range(Evaluate("INDIRECT(""$F$3"")")).Select
-    ActiveWindow.ScrollRow = Selection.Row
+    range(Evaluate("INDIRECT(""$C$1"")")).Calculate
 End Sub
 
-Private Sub Worksheet_SelectionChange(ByVal target As Range)
+Private Sub Worksheet_Deactivate()
+    range(Evaluate("INDIRECT(""$C$1"")")).Calculate
+End Sub
+
+Private Sub Worksheet_SelectionChange(ByVal target As range)
 
 End Sub
